2000-07-29 09:45 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbcomp.h
        * removed declaration of hb_comp_iCompiled and hb_comp_EOL
        
    *source/compiler/harbour.c
    *source/compiler/harbour.l
    *source/compiler/harbour.y
    *source/compiler/hbgenerr.c
        * removed hb_comp_iCompiled and hb_comp_EOL
        * fixed generation of runtime line numbers to meets numbers
        maintained by the preprocessor

2000-07-28 15:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rtl/gtstd/gtstd.c
     * Restored to version 1.15 with the extra tracing information
       from version 1.18.

   + source/rtl/gtcgi
   + source/rtl/gtcgi/gtcgi.c
   + source/rtl/gtcgi/Makefile
   + source/rtl/mousecgi.c
     + Formerly gtstd.c, version 1.17, and support files.

2000-07-28 18:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * hb_slex.bc
     * Synchronized with makefile.bc

2000-07-29 03:28 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * include/hbcomp.h
   * source/compiler/hbusage.c
   * source/compiler/harbour.c
   * source/compiler/cmdcheck.c
     - Removed the command line option to disable jump optimizing. The reason
       is that this option has an internal debugging purpose, which doesn't
       cause any practical change to the generated code, at least from a
       Harbour users POV. If disabling of this pcode generation phase is
       needed by anyone, we could add a compile-time disabling macro for it.
       The only reason I can think of disabling this as a user is compiling
       speed, which may increase by using it, if this is important I think
       we should rather add a pcode optimization level option, which would be
       more generic solution for this.

2000-07-29 03:16 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/rtl/gt*/gt*.c
     ! Extended TRACE call for hb_gtSetPos() with iMethod.

2000-07-29 03:08 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/rtl/oldclear.c
   * source/rtl/setpos.c